Keep comment translation compatible with older Android